[package]
name = "vimspeak"
version = "0.1.0"
authors = ["Nicholas Young <hi@secretfader.com>"]
edition = "2018"

[dependencies]
structopt = "0.3.11"
confy = "0.3.1"
cpal = "0.11.0"
deepspeech = "0.6.1"
anyhow = "1.0.26"
serde = { version = "1.0.104", features = ["derive"] }
ringbuf = "0.2.1"
webrtc-vad = "0.4.0"
dirs = "2.0.2"
surf = "1.0.3"
async-std = "1.5.0"
log = "0.4.8"
thiserror = "1.0.11"
num-traits = "0.2.11"

[patch.crates-io]
cpal = { git = "https://github.com/RustAudio/cpal", branch = "master" }
